IF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")
    LINK_DIRECTORIES (${GTK2_LIBRARY_DIRS})
ENDIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")

INCLUDE_DIRECTORIES (
    ${CMAKE_SOURCE_DIR}/
    ${CMAKE_SOURCE_DIR}/BAL/Base
    ${CMAKE_SOURCE_DIR}/BAL/Base/wtf
    ${CMAKE_BINARY_DIR}/generated_link/OWBAL
)

ADD_SUBDIRECTORY (Base)
ADD_SUBDIRECTORY (OWBAL)
ADD_SUBDIRECTORY (WKAL)
